# systemctl-extra

./: .gitignore  Cargo.toml  README.asciidoc  pixi.toml
docs/: operartor-guide.asciidoc
mock_systemd_units/: database.service  my-web-app.service  system-monitor.service  utility.service
src/: main.rs  systemd_modes.rs
src/commands/: edit.rs  list.rs  mod.rs
